--- a/cuppa/src/app/app.component.html
+++ b/cuppa/src/app/app.component.html
@@ -1,4 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<app-navbar></app-navbar>
+
 <div class="container mt-5">
   <div style="text-align:center">
     <h1>
