Add MeetupsComponent, fix routerLinkActive typo

--- a/cuppa/src/app/navbar/navbar.component.html
+++ b/cuppa/src/app/navbar/navbar.component.html
@@ -16,9 +16,15 @@
         </a>
       </li>
 
-      <li class="nav-item" outerLinkActive="active">
+      <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/groups">
           Groups
+        </a>
+      </li>
+
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/meetups">
+          Meetups
         </a>
       </li>
 
