--- a/cuppa/src/app/home/home.component.scss
+++ b/cuppa/src/app/home/home.component.scss
@@ -1,25 +1,22 @@
 @import '../../colors.scss';
 
-#homeComponent::after {
-  content: "";
-  background: url('/assets/img/hero.jpg');
-  opacity: 0.1;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;   
+.d-grid {
+  display: grid;
+  grid: 100vw;
 }
 
-#homeComponent {
-  height: calc(100vh - 56px);
-  overflow-y: scroll;
+.content {
+  grid-area: 1 / 1;
+  min-height: calc(100vh - 56px);
 }
 
-// input {
-//   border-width: 0 0 1px 0;
-// }
+.overlay {
+  grid-area: 1 / 1;
+  opacity: 0.9;
+  background-color: white;
+  width: 100vw;
+  z-index: -1;
+}
 
 label {
   color: map-get($colors, "accent");
