--- a/cuppa/src/styles.scss
+++ b/cuppa/src/styles.scss
@@ -28,10 +28,24 @@ body {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
 
   .item {
     flex: 0 0 auto; 
   }
 }
+
+.navbar {
+  .nav-item.active > .nav-link {
+    font-weight: 400;
+  }
+
+  &.navbar-light {
+      .nav-item.active > .nav-link {
+          color: map-get($colors, "accent");
+      }
+  }
+}
+
 
 
