--- a/cuppa/src/app/home/home.component.scss
+++ b/cuppa/src/app/home/home.component.scss
@@ -2,7 +2,7 @@
 
 .d-grid {
   display: grid;
-  grid: 100vw;
+  grid-auto-columns: 100vw;
 }
 
 .content {
@@ -14,7 +14,6 @@
   grid-area: 1 / 1;
   opacity: 0.9;
   background-color: white;
-  width: 100vw;
   z-index: -1;
 }
 
