Fix mobile view for Groups

--- a/cuppa/src/app/groups/groups.component.html
+++ b/cuppa/src/app/groups/groups.component.html
@@ -1,7 +1,7 @@
 <app-groups-tab-bar></app-groups-tab-bar>
 <div class="row">
-    <app-groups-sidebar class="col-md-3"></app-groups-sidebar>
-    <div class="col-md-9">
-      Content
-    </div>
+  <app-groups-sidebar class="col-12 col-md-3"></app-groups-sidebar>
+  <div class="col-12 col-md-9">
+    Content
   </div>
+</div>
