Add animations to navbar

--- a/cuppa/src/app/navbar/navbar.component.html
+++ b/cuppa/src/app/navbar/navbar.component.html
@@ -1,13 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="#">Cuppa</a>
   <button class="navbar-toggler" type="button" 
-    (click)="toggleNavbar = !toggleNavbar"
+    (click)="toggle()"
     data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" [ngbCollapse]="!toggleNavbar" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse" [ngbCollapse]="!toggleNavbar" id="navbarSupportedContent"
+   [@collapse]="navbarState">
 
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active"[routerLinkActiveOptions]="{exact: true}">
