--- a/cuppa/src/styles.scss
+++ b/cuppa/src/styles.scss
@@ -35,6 +35,12 @@ label {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: scroll;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar { 
+    display: none; 
+  }
+
   -webkit-overflow-scrolling: touch;
 
   .item {
