Add shelf component + stub, fix extra width

--- a/cuppa/src/app/home/home.component.html
+++ b/cuppa/src/app/home/home.component.html
@@ -20,7 +20,7 @@
         <label>Find your interests</label>
         <!-- TODO refactor to own component with < and > buttons -->
         <!-- Inject content via transclusion -->
-        <div class="horizontal-scroll">
+        <app-shelf>
           <div class="card item mr-3" style="height: 200px; width: 200px"></div>
           <div class="card item mr-3" style="height: 200px; width: 200px"></div>
           <div class="card item mr-3" style="height: 200px; width: 200px"></div>
@@ -29,7 +29,7 @@
           <div class="card item mr-3" style="height: 200px; width: 200px"></div>
           <div class="card item mr-3" style="height: 200px; width: 200px"></div>
           <div class="card item mr-3" style="height: 200px; width: 200px"></div>
-        </div>
+        </app-shelf>
   
         <div class="mt-4">
           <label>My Groups</label>
