--- a/cuppa/src/app/home/home.component.html
+++ b/cuppa/src/app/home/home.component.html
@@ -30,6 +30,10 @@
           <div class="card item mr-3" style="height: 200px; width: 200px"></div>
           <div class="card item mr-3" style="height: 200px; width: 200px"></div>
         </app-shelf>
+
+        <div class="w-100 text-right">
+          Shift + scroll to scroll horizontally.
+        </div>
   
         <div class="mt-4">
           <label>My Groups</label>
