--- a/cuppa/src/app/shelf/shelf.component.scss
+++ b/cuppa/src/app/shelf/shelf.component.scss
@@ -7,11 +7,11 @@
 }
 
 .horizontal-scroll {
-  z-index: -1;
+  z-index: 0;
 }
 
 .btn {
-  z-index: 0;
+  z-index: 1; // TODO
 
   &.left {
     margin-left: -20px;
