Fix: remove @collapse since no animations for now

--- a/cuppa/src/app/groups/groups.component.html
+++ b/cuppa/src/app/groups/groups.component.html
@@ -1,6 +1,6 @@
 <app-groups-tab-bar></app-groups-tab-bar>
 <div class="row">
-  <app-groups-sidebar class="col-12 col-md-3"></app-groups-sidebar>
+  <app-groups-sidebar class="col-12 col-md-3 d-none d-md-block"></app-groups-sidebar>
   <div class="col-12 col-md-9">
     Content
   </div>
