--- a/cuppa/src/app/groups/groups-tab-bar/groups-tab-bar.component.scss
+++ b/cuppa/src/app/groups/groups-tab-bar/groups-tab-bar.component.scss
@@ -10,6 +10,8 @@ nav {
   .nav-link {
     margin-left: 8px;
     margin-right: 8px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   // li {
