Routing for hcild (Groups)

--- a/cuppa/src/app/groups/groups.component.html
+++ b/cuppa/src/app/groups/groups.component.html
@@ -2,6 +2,6 @@
 <div class="row">
   <app-groups-sidebar class="col-12 col-md-3 d-none d-md-block"></app-groups-sidebar>
   <div class="col-12 col-md-9">
-    Content
+    <router-outlet></router-outlet>
   </div>
 </div>
