Card should be min-height, use card-body class

--- a/cuppa/src/app/groups/groups.component.scss
+++ b/cuppa/src/app/groups/groups.component.scss
@@ -5,3 +5,12 @@
     margin-left: 0;
   }
 }
+
+@media (min-width: 768px) {
+  // compensate for sidebar
+  // NOTE number was found through trial and error
+  .content {
+      margin-left: -6.125vw;
+  }
+}
+
