--- a/cuppa/src/app/groups/group/group.component.html
+++ b/cuppa/src/app/groups/group/group.component.html
@@ -1,66 +1,70 @@
-<div class="card w-100 mb-3 px-3 py-3" style="height: 240px;">
-  <h3>{{ group.name }}</h3>
-
-  <div class="row">
-    <div class="col-12 col-md-3">
-      <label class="secondary">Members</label>
-
-      <ul class="group-list">
-        <li *ngFor="let member of group.members.slice(0, LIMIT)">
-          {{ member }}
-        </li>
-
-        <li>
-          <span *ngIf="group.members.length > LIMIT">+ {{group.members.length - LIMIT}} more</span>
-        </li>
-      </ul>
-
-    </div>
-
-    <div class="col-12 col-md-6">
-      <label class="secondary">Meetups</label>
-
-      <ul class="group-list pl-0">
-        <li *ngFor="let meetup of group.meetups.slice(0, LIMIT)">
-          <div class="d-flex flex-direction-row">
-
-            <div style="width: 96px;" class="mt-auto pr-3 d-flex">
-              <label class="highlight mb-0 pb-0 ml-auto">
-                {{ meetup.dateFormatted }}
-              </label>
-            </div>
-
-            <div style="width: 120px;" class="mt-auto pr-3">
-              {{ meetup.timeFormatted }}<br>
-              at {{ meetup.venue }}
-            </div>
-
-            <div class="d-flex mt-auto">
-              <span class="" *ngFor="let attendee of meetup.attending.slice(0, LIMIT_ATTENDEE)">
-                <div class="avatar"></div>
-              </span>
-              <span class="my-auto" *ngIf="meetup.attending.length > LIMIT_ATTENDEE">+ {{meetup.attending.length - LIMIT_ATTENDEE}}</span>
-            </div>
-
-          </div>
-        </li>
-      
-        <li>
-          <span *ngIf="group.meetups.length > LIMIT">+ {{group.members.length - LIMIT}} more</span>
-        </li>
-      </ul>
+<div class="card w-100 mb-3" style="min-height: 240px;">
+  <div class="card-body">
+    <h3>{{ group.name }}</h3>
     
-    </div>
-
-    <div class="col-12 col-md-3">
-      <label class="secondary">Actions</label>
-
-      <ul class="group-list actions pl-0">
-        <li>View Group</li>
-        <li>Plan a Meetup</li>
-        <li>Invite</li>
-      </ul>
+    <div class="row">
+      <div class="col-12 col-md-3">
+        <label class="secondary">Members</label>
     
+        <ul class="group-list">
+          <li *ngFor="let member of group.members.slice(0, LIMIT)">
+            {{ member }}
+          </li>
+    
+          <li>
+            <span *ngIf="group.members.length > LIMIT">+ {{group.members.length - LIMIT}} more</span>
+          </li>
+        </ul>
+    
+      </div>
+    
+      <div class="col-12 col-md-6">
+        <label class="secondary">Meetups</label>
+    
+        <ul class="group-list pl-0">
+          <li *ngFor="let meetup of group.meetups.slice(0, LIMIT)">
+            <div class="d-flex flex-direction-row">
+    
+              <div style="width: 96px;" class="mt-auto pr-3 d-flex">
+                <label class="highlight mb-0 pb-0 ml-auto">
+                  {{ meetup.dateFormatted }}
+                </label>
+              </div>
+    
+              <div style="width: 120px;" class="mt-auto pr-3">
+                {{ meetup.timeFormatted }}<br>
+                at {{ meetup.venue }}
+              </div>
+    
+              <div class="d-flex mt-auto">
+                <span class="" *ngFor="let attendee of meetup.attending.slice(0, LIMIT_ATTENDEE)">
+                  <div class="avatar"></div>
+                </span>
+                <span class="my-auto" *ngIf="meetup.attending.length > LIMIT_ATTENDEE">+
+                  {{meetup.attending.length - LIMIT_ATTENDEE}}</span>
+              </div>
+    
+            </div>
+          </li>
+    
+          <li>
+            <span *ngIf="group.meetups.length > LIMIT">+ {{group.members.length - LIMIT}} more</span>
+          </li>
+        </ul>
+    
+      </div>
+    
+      <div class="col-12 col-md-3">
+        <label class="secondary">Actions</label>
+    
+        <ul class="group-list actions pl-0">
+          <li>View Group</li>
+          <li>Plan a Meetup</li>
+          <li>Invite</li>
+        </ul>
+    
+      </div>
     </div>
   </div>
+  
 </div>
