Change to 0.25vw padding-right

--- a/cuppa/src/app/groups/groups.component.scss
+++ b/cuppa/src/app/groups/groups.component.scss
@@ -8,9 +8,8 @@
 
 @media (min-width: 768px) {
   // compensate for sidebar
-  // NOTE number was found through trial and error
   .content {
-      margin-left: -6.125vw;
+    padding-right: 25vw;
   }
 }
 
