--- a/cuppa/src/app/groups/groups.component.scss
+++ b/cuppa/src/app/groups/groups.component.scss
@@ -7,9 +7,8 @@
 }
 
 @media (min-width: 768px) {
-  // compensate for sidebar
   .content {
-    padding-right: 25vw;
+    padding-left: -25vw;
   }
 }
 
