--- a/cuppa/src/colors.scss
+++ b/cuppa/src/colors.scss
@@ -1,6 +1,6 @@
 $colors: (
     "accent": #79A7A8,
     "main": #2C3E50,
-    "navbar": #72c1d9a8,
+    "navbar": #72c1d9,
     "secondary": #8499A5  
 );
