--- a/cuppa/src/colors.scss
+++ b/cuppa/src/colors.scss
@@ -1,6 +1,6 @@
 $colors: (
-    "accent": #79A7A8,
+    "accent": #57839E,
     "main": #2C3E50,
-    "navbar": #72c1d9,
-    "secondary": #8499A5  
+    "navbar": #B0ECFF,
+    "secondary": #748994  
 );
