Rebalanced navbar color

--- a/cuppa/src/colors.scss
+++ b/cuppa/src/colors.scss
@@ -1,6 +1,6 @@
 $colors: (
     "accent": #57839E,
     "main": #2C3E50,
-    "navbar": #B0ECFF,
+    "navbar": #B5DDEC,
     "secondary": #748994  
 );
