--- a/cuppa/src/app/home/home.component.html
+++ b/cuppa/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <div class="container mt-5 mb-5">
       <div class="text-center display-4">
         Find and plan meetups.<br>
-        Do fun stuff.
+        Together.
       </div>
   
       <form class="mt-4">
