--- a/cuppa/src/app/groups/group/group.component.scss
+++ b/cuppa/src/app/groups/group/group.component.scss
@@ -1,9 +1,13 @@
 @import '../../../colors.scss';
 
+$avatarSize: 36px;
+
 ul.group-list {
     list-style: none;
     
     margin-bottom: 0;   // already got margin from contents
+
+    padding-left: 0;    // don't want padding
 
     &.actions > * {
         padding-top: 0px;
@@ -13,6 +17,10 @@ ul.group-list {
     li {
         padding-top: 5px;
         padding-bottom: 5px;
+    }
+
+    .more-text {
+        padding-left: $avatarSize;
     }
 }
 
@@ -25,8 +33,8 @@ label.secondary {
 }
 
 .avatar {
-    height: 36px;
-    width: 36px;
+    height: $avatarSize;
+    width: $avatarSize;
     margin-right: 5px;
     display: inline-block;
     border-radius: 100%;
