--- a/cuppa/src/app/groups/group/group.component.html
+++ b/cuppa/src/app/groups/group/group.component.html
@@ -3,7 +3,7 @@
     <h3>{{ group.name }}</h3>
     
     <div class="row">
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 mb-3 mb-md-0">
         <label class="secondary">Members</label>
     
         <ul class="group-list">
@@ -18,7 +18,7 @@
     
       </div>
     
-      <div class="col-12 col-md-6">
+      <div class="col-12 col-md-6 mb-3 mb-md-0">
         <label class="secondary">Meetups</label>
     
         <ul class="group-list">
@@ -54,7 +54,7 @@
     
       </div>
     
-      <div class="col-12 col-md-3">
+      <div class="col-12 col-md-3 mb-3 mb-md-0">
         <label class="secondary">Actions</label>
     
         <ul class="group-list actions">
