Last column does NOT need margin

--- a/cuppa/src/app/groups/group/group.component.html
+++ b/cuppa/src/app/groups/group/group.component.html
@@ -54,7 +54,7 @@
     
       </div>
     
-      <div class="col-12 col-md-3 mb-3 mb-md-0">
+      <div class="col-12 col-md-3">
         <label class="secondary">Actions</label>
     
         <ul class="group-list actions">
