Move bg out from body and to a grid cell

--- a/cuppa/src/app/home/home.component.html
+++ b/cuppa/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="d-grid">
+  <div class="background"></div>
   <div class="overlay"></div>
   <div class="content">
     <div class="container mt-5 mb-5">
