--- a/cuppa/src/app/home/home.component.scss
+++ b/cuppa/src/app/home/home.component.scss
@@ -9,6 +9,15 @@
   min-height: calc(100vh - 56px);
 }
 
+.background {
+  grid-area: 1 / 1;
+  background-image: url("/assets/img/hero.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -2;
+}
+
 .overlay {
   grid-area: 1 / 1;
   opacity: 0.9;
