Sign up/login form

--- a/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
+++ b/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
@@ -1,20 +1,20 @@
 <div class="pl-4">
   <div class="favourites list">
-    <label>Favourites</label>
+    <label class="emphasis">Favourites</label>
     <ul class="nav">
       <li class="nav-link">Secret Society BLANKET</li>
     </ul>
   </div>
   
   <div class="groups list">
-    <label>Groups</label>
+    <label class="emphasis">Groups</label>
     <ul class="nav">
       <li class="nav-link">Houkago Tea Time</li>
     </ul>
   </div>
 
   <div class="groups list">
-    <label>Communities</label>
+    <label class="emphasis">Communities</label>
     <ul class="nav">
       <li class="nav-link">Mech Keys</li>
       <li class="nav-link">Headphones</li>
