--- a/cuppa/src/app/home/home.component.html
+++ b/cuppa/src/app/home/home.component.html
@@ -11,14 +11,14 @@
       <form class="mt-4">
         <!-- TODO: prevent default-->
         <div class="form-group">
-          <label for="search">Search</label>
+          <label class="emphasis" for="search">Search</label>
           <input type="text" class="form-control" id="search" name="search" autocomplete="name"
             placeholder="Location, activity, group or community">
         </div>
       </form>
   
       <div class="mt-4">
-        <label>Find your interests</label>
+        <label class="emphasis">Find your interests</label>
         <!-- TODO refactor to own component with < and > buttons -->
         <!-- Inject content via transclusion -->
         <app-shelf>
@@ -49,7 +49,7 @@
         </div>
   
         <div class="mt-4">
-          <label>My Groups</label>
+          <label class="emphasis">My Groups</label>
           <app-group></app-group>
   
         </div>
