--- a/cuppa/src/app/navbar/navbar.component.html
+++ b/cuppa/src/app/navbar/navbar.component.html
@@ -45,28 +45,63 @@
     </div>
 
     <ng-template #content let-modal>
-      <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-          <span aria-hidden="true">&times;</span>
-        </button>
+      <div class="d-grid">
+        <div class="modal-header d-flex" style="grid-area: 1 / 1">
+          <h4 class="modal-title" class="mx-auto mb-0" id="modal-basic-title">
+            <span *ngIf="isLogin; else signUp">
+              Log in to cuppa
+            </span>
+          </h4>
+          <ng-template #signUp>
+            Sign up for cuppa
+          </ng-template>
+        </div>
+        <div style="grid-area: 1 / 1; z-index: 1;" class="d-flex">
+          <button type="button" class="close ml-auto mr-4 my-auto" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        
       </div>
+      
       <div class="modal-body">
         <form>
           <div class="form-group">
-            <label for="dateOfBirth">Date of birth</label>
+            <label for="username">Username</label>
             <div class="input-group">
-              <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker
-                #dp="ngbDatepicker">
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary calendar" (click)="dp.toggle()" type="button"></button>
-              </div>
+              <input id="username" class="form-control" placeholder="Username" name="username">
             </div>
           </div>
+
+          <div class="form-group">
+            <label for="password">Password</label>
+            <div class="input-group">
+              <input id="password" type="password" class="form-control" placeholder="Password" name="password">
+            </div>
+          </div>
+
+          <div class="w-100 text-center">
+            <button type="button" class="btn btn-outline-dark" (click)="login()">Login</button>
+          </div>
+
+          <div class="w-100" *ngIf="isLogin">
+            <hr>
+            
+            <div class="w-100 text-center">
+              <a href="#">Forgot username or password?</a>
+            </div>
+          </div>
+          
         </form>
+
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
+        <div *ngIf="isLogin; else signUpFooter">
+          Don't have an account? <a href="#" (click)="toggleSignupLogin()">Sign Up</a>
+        </div>
+        <ng-template #signUpFooter>
+          Have an account?&nbsp;<a href="#" (click)="toggleSignupLogin()">Login</a>
+        </ng-template>
       </div>
     </ng-template>
 
