--- a/cuppa/src/app/navbar/navbar.component.html
+++ b/cuppa/src/app/navbar/navbar.component.html
@@ -69,14 +69,20 @@
           <div class="form-group">
             <label for="username">Username</label>
             <div class="input-group">
-              <input id="username" class="form-control" placeholder="Username" name="username">
+              <input id="username" required [(ngModel)]="username" class="form-control" placeholder="Username" name="username" #usernameRef="ngModel">
+            </div>
+            <div [hidden]="usernameRef.valid || usernameRef.pristine" class="alert alert-danger">
+              Username is required
             </div>
           </div>
 
           <div class="form-group">
             <label for="password">Password</label>
             <div class="input-group">
-              <input id="password" type="password" class="form-control" placeholder="Password" name="password">
+              <input id="password" required [(ngModel)]="password" type="password" class="form-control" placeholder="Password" name="password" #passwordRef="ngModel">
+            </div>
+            <div [hidden]="passwordRef.valid || passwordRef.pristine" class="alert alert-danger">
+              Password is required
             </div>
           </div>
 
