--- a/cuppa/src/app/navbar/navbar.component.scss
+++ b/cuppa/src/app/navbar/navbar.component.scss
@@ -15,3 +15,12 @@
 
     background-color: map-get($colors, "navbar");
 }
+
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
