Can now sign up and login

--- a/cuppa/src/app/navbar/navbar.component.html
+++ b/cuppa/src/app/navbar/navbar.component.html
@@ -45,7 +45,9 @@
     </div>
 
     <ng-template #profile>
-      {{ user.name }}
+      <ul class="navbar-nav">
+        <li class="nav-link">{{ user.name }}</li>
+      </ul>
     </ng-template>
 
     <ng-template #content let-modal>
@@ -70,6 +72,17 @@
       
       <div class="modal-body">
         <form>
+          <div class="form-group" *ngIf="!isLogin">
+            <label for="name">Name</label>
+            <div class="input-group">
+              <input id="name" required [(ngModel)]="name" class="form-control" placeholder="Name" name="name"
+                #nameRef="ngModel">
+            </div>
+            <div [hidden]="nameRef.valid || nameRef.pristine" class="alert alert-danger">
+              Name is required
+            </div>
+          </div>
+
           <div class="form-group">
             <label for="username">Username</label>
             <div class="input-group">
@@ -91,8 +104,13 @@
           </div>
 
           <div class="w-100 text-center">
-            <button type="button" class="btn btn-primary" (click)="login()">Login</button>
+            <div *ngIf="isLogin; else signUpButton">
+              <button type="button" class="btn btn-primary" (click)="login()">Login</button>
+            </div>
           </div>
+          <ng-template #signUpButton>
+            <button type="button" class="btn btn-primary" (click)="signUpAction()">Sign up</button>
+          </ng-template>
 
           <div class="w-100" *ngIf="isLogin">
             <hr>
