Can get groups data

--- a/cuppa/src/app/home/home.component.html
+++ b/cuppa/src/app/home/home.component.html
@@ -50,6 +50,8 @@
   
         <div class="mt-4">
           <label class="emphasis">My Groups</label>
+
+          {{ groups | json }}
           <app-group></app-group>
   
         </div>
