Margin-bottom for content in groups

--- a/cuppa/src/app/groups/groups.component.html
+++ b/cuppa/src/app/groups/groups.component.html
@@ -1,7 +1,7 @@
 <app-groups-tab-bar></app-groups-tab-bar>
 <div class="row">
   <app-groups-sidebar class="col-12 col-md-3 d-none d-md-block"></app-groups-sidebar>
-  <div class="col-12 col-md-9 content">
+  <div class="col-12 col-md-9 content mb-5">
     <router-outlet></router-outlet>
   </div>
 </div>
