--- a/cuppa/src/app/groups/groups.component.html
+++ b/cuppa/src/app/groups/groups.component.html
@@ -2,6 +2,8 @@
 <div class="row">
   <app-groups-sidebar class="col-12 col-md-3 d-none d-md-block"></app-groups-sidebar>
   <div class="col-12 col-md-9 content mb-5">
-    <router-outlet></router-outlet>
+    <div class="container">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
