Can create new group

--- a/cuppa/src/app/groups/groups.component.html
+++ b/cuppa/src/app/groups/groups.component.html
@@ -3,6 +3,12 @@
   <app-groups-sidebar class="col-12 col-md-3 d-none d-md-block"></app-groups-sidebar>
   <div class="col-12 col-md-9 content mb-5">
     <div class="container">
+      <div class="text-right">
+        <a routerLink="/groups/new"><button class="btn btn-outline-primary" [hidden]="this.router.url !== '/groups'">
+          <fa-icon [icon]="faPlus" class="mr-1"></fa-icon>
+          New Group
+        </button></a>
+      </div>
       <router-outlet></router-outlet>
     </div>
   </div>
