--- a/cuppa/src/app/groups/groups-tab-bar/groups-tab-bar.component.html
+++ b/cuppa/src/app/groups/groups-tab-bar/groups-tab-bar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <ul class="navbar-nav ml-auto mr-auto">
-    <li class="nav-item" routerLink="/groups" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+    <li class="nav-item" routerLink="/groups" routerLinkActive="active">
       <a class="nav-link">
         Groups
       </a>
