--- a/cuppa/src/app/groups/group/group.component.html
+++ b/cuppa/src/app/groups/group/group.component.html
@@ -1,6 +1,6 @@
 <div class="card w-100 mb-3" style="min-height: 240px;">
   <div class="card-body">
-    <h3>{{ group.name }}</h3>
+    <h3 [routerLink]="'/groups/' + group._id">{{ group.name }}</h3>
     
     <div class="row">
       <div class="col-12 col-md-3 mb-3 mb-md-0">
@@ -58,7 +58,7 @@
         <label class="secondary">Actions</label>
     
         <ul class="group-list actions">
-          <li>View Group</li>
+          <li><a [routerLink]="'/groups/' + group._id">View Group</a></li>
           <li>Plan a Meetup</li>
           <li>Invite</li>
         </ul>
