--- a/cuppa/src/app/groups/groups.component.html
+++ b/cuppa/src/app/groups/groups.component.html
@@ -1,8 +1,8 @@
 <app-groups-tab-bar></app-groups-tab-bar>
 <div class="row">
   <app-groups-sidebar class="col-12 col-md-3 d-none d-md-block"></app-groups-sidebar>
-  <div class="col-12 col-md-9 content mb-5">
-    <div class="container">
+  <div class="col-12 col-md-9 content mb-5" [ngClass]="showAsContainer() ? 'container' : ''">
+    <div [ngClass]="showAsContainer() ? 'container' : ''">
       <div class="text-right">
         <a routerLink="/groups/new"><button class="btn btn-outline-primary" [hidden]="this.router.url !== '/groups'">
           <fa-icon [icon]="faPlus" class="mr-1"></fa-icon>
