--- a/cuppa/src/app/groups/groups.component.scss
+++ b/cuppa/src/app/groups/groups.component.scss
@@ -8,7 +8,11 @@
 
 @media (min-width: 768px) {
   .content {
-    margin-left: -5vw;
+    &.container {
+      margin-left: -5vw;
+    }
+    
+    margin-left: 0;
   }
 }
 
