--- a/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.scss
+++ b/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.scss
@@ -1,3 +1,5 @@
+@import '../../../colors.scss';
+
 .nav-link {
   padding-top: 5px;
   padding-bottom: 5px;
@@ -9,4 +11,11 @@
 
 .list {
   margin-bottom: 20px;
+}
+
+// same rule in navbar scss
+.nav {
+    .nav-item.active > .nav-link {
+        color: map-get($colors, "accent");
+    }
 }
