Set a max-width for jumbotron

--- a/cuppa/src/app/groups/group-page/group-page.component.html
+++ b/cuppa/src/app/groups/group-page/group-page.component.html
@@ -2,8 +2,8 @@
 <div class="d-grid w-100 h-100">
   <div class="background h-400"></div>
   <div class="overlay h-400"></div>
-  <div class="jumbotron h-400 content">
-    <div class="container h-100 d-flex">
+  <div class="jumbotron h-400 content mw-60vw">
+    <div class="h-100 d-flex">
       <div class="mt-auto ml-auto" *ngIf="group">
         <div class="d-flex" style="flex-direction: column;">
           <div class="lead fw-400 "> {{ group.members.length }} {{ group.members.length != 1 ? 'members' : 'member' }} </div>
