--- a/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
+++ b/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
@@ -12,7 +12,7 @@
       <ul class="nav" *ngIf="myGroups">
         <!-- routerLinkActive for dynamic links -->
         <!-- https://stackoverflow.com/a/42295902 -->
-        <li class="nav-item" *ngFor="let group of myGroups.groups" [routerLink]="['/groups', group._id]"
+        <li class="nav-item" *ngFor="let group of myGroups.groups" [routerLink]="['/groups/view', group._id]"
           routerLinkActive="active">
           <a class="nav-link">
             {{ group.name }}
