Add span to be more clickable (sidebar)

--- a/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
+++ b/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
@@ -15,7 +15,9 @@
         <li class="nav-item" *ngFor="let group of myGroups.groups" [routerLink]="['/groups/view', group._id]"
           routerLinkActive="active">
           <a class="nav-link">
-            {{ group.name }}
+            <span>
+              {{ group.name }}
+            </span>
           </a>
         </li>
       </ul>
