--- a/cuppa/src/app/groups/new-group/new-group.component.html
+++ b/cuppa/src/app/groups/new-group/new-group.component.html
@@ -4,7 +4,7 @@
 </button></a>
 
 <form class="mt-3">
-  <div class="form-group" *ngIf="!isLogin">
+  <div class="form-group">
     <label for="name">Name</label>
     <div class="input-group">
       <input id="name" required [(ngModel)]="name" class="form-control" placeholder="Name" name="name" #nameRef="ngModel">
