--- a/cuppa/src/app/navbar/navbar.component.html
+++ b/cuppa/src/app/navbar/navbar.component.html
@@ -12,19 +12,19 @@
   <!-- [@collapse]="navbarState"> -->
 
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="toggle()">
+      <li class="nav-item mr-auto" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="toggle()">
         <a class="nav-link" routerLink="/">
           Home
         </a>
       </li>
 
-      <li class="nav-item" routerLinkActive="active">
+      <li class="nav-item mr-auto" routerLinkActive="active">
         <a class="nav-link" routerLink="/groups" (click)="toggle()">
           Groups
         </a>
       </li>
 
-      <li class="nav-item" routerLinkActive="active">
+      <li class="nav-item mr-auto" routerLinkActive="active">
         <a class="nav-link" routerLink="/meetups" (click)="toggle()">
           Meetups
         </a>
