Improve sidebar behaviour

--- a/cuppa/src/app/groups/groups-tab-bar/groups-tab-bar.component.html
+++ b/cuppa/src/app/groups/groups-tab-bar/groups-tab-bar.component.html
@@ -1,21 +1,1 @@
-<nav class="navbar navbar-expand-lg navbar-light">
-  <ul class="navbar-nav ml-auto mr-auto">
-    <li class="nav-item" routerLink="/groups" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-      <a class="nav-link">
-        Groups
-      </a>
-    </li>
-
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" routerLink="/groups/communities">
-        Communities
-      </a>
-    </li>
-
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" routerLink="/groups/friends">
-        Friends
-      </a>
-    </li>
-  </ul>
-</nav>
+<app-tab-bar></app-tab-bar>
