--- a/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
+++ b/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
@@ -1,11 +1,11 @@
 <div class="pl-4 w-100 d-flex" *ngIf="myGroups">
-  <div class="ml-auto">
+  <div>
     <!-- <div class="favourites list">
-        <label class="emphasis">Favourites</label>
-        <ul class="nav">
-          <li class="nav-link">Secret Society BLANKET</li>
-        </ul>
-      </div> -->
+          <label class="emphasis">Favourites</label>
+          <ul class="nav">
+            <li class="nav-link">Secret Society BLANKET</li>
+          </ul>
+        </div> -->
     
     <div class="groups list">
       <label class="emphasis">Groups</label>
@@ -32,7 +32,8 @@
       </ul>
     </div>
   </div>
- 
+  
+
 
   
 </div>
