Tweak sidebar/content styles

--- a/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
+++ b/cuppa/src/app/groups/groups-sidebar/groups-sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="pl-4 w-100 d-flex" *ngIf="myGroups">
-  <div>
+  <div class="ml-auto">
     <!-- <div class="favourites list">
           <label class="emphasis">Favourites</label>
           <ul class="nav">
