--- a/cuppa/src/app/groups/group-page/group-page.component.html
+++ b/cuppa/src/app/groups/group-page/group-page.component.html
@@ -2,16 +2,22 @@
 <div class="d-grid w-100 h-100">
   <div class="background h-400"></div>
   <div class="overlay h-400"></div>
-  <div class="jumbotron h-400 content mw-60vw">
-    <div class="h-100 d-flex">
-      <div class="mt-auto ml-auto" *ngIf="group">
-        <div class="d-flex" style="flex-direction: column;">
-          <div class="lead fw-400 "> {{ group.members.length }} {{ group.members.length != 1 ? 'members' : 'member' }} </div>
-          <h1 class="display-4">{{ group.name }}</h1>
-          <div class="lead fw-400 w-100 text-right"> {{ group.description }} </div>
+  <div class="jumbotron h-400 content">
+    <div class="row h-100">
+      <div class="col-12 col-md-11 h-100">
+        <div class="h-100 d-flex">
+          <div class="mt-auto ml-auto" *ngIf="group">
+            <div class="d-flex" style="flex-direction: column;">
+              <div class="lead fw-400 "> {{ group.members.length }} {{ group.members.length != 1 ? 'members' : 'member' }}
+              </div>
+              <h1 class="display-4">{{ group.name }}</h1>
+              <div class="lead fw-400 w-100 text-right"> {{ group.description }} </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    
 
   </div>
 </div>
