--- a/cuppa/src/app/common/tab-bar/tab-bar.component.html
+++ b/cuppa/src/app/common/tab-bar/tab-bar.component.html
@@ -1,7 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <ul class="navbar-nav ml-auto mr-auto">
     <li class="nav-item" *ngFor="let item of navItems"
-        [routerLink]="item.link" routerLinkActive="active" [routerLinkActiveOptions]="item.routerLinkActiveOptions">
+        [routerLink]="item.link" 
+        routerLinkActive="active"
+        [ngClass]="item.additionalTest(router.url) ? 'active' : ''"
+        [routerLinkActiveOptions]="item.routerLinkActiveOptions">
       <a class="nav-link">
         {{ item.name }}
       </a>
