--- a/cuppa/src/app/groups/groups.component.html
+++ b/cuppa/src/app/groups/groups.component.html
@@ -2,7 +2,7 @@
 <div class="d-flex" style="flex-direction: row;">
   <!-- <div style="width: auto"></div> -->
 
-  <app-groups-sidebar class="sidebar d-none d-md-block"></app-groups-sidebar>
+  <app-groups-sidebar class="sidebar mr-3 d-none d-md-block"></app-groups-sidebar>
 
   <div class="content mb-5" [ngClass]="showAsContainer() ? 'container' : ''">
     <div [ngClass]="showAsContainer() ? 'container' : ''">
