--- a/cuppa/src/app/common/tab-bar/tab-bar.component.html
+++ b/cuppa/src/app/common/tab-bar/tab-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-  <ul class="navbar-nav ml-auto mr-auto">
+  <ul class="navbar-nav mr-auto" [ngClass]="!alignLeft ? 'ml-auto' : ''">
     <li class="nav-item" *ngFor="let item of navItems"
         [routerLink]="item.link" 
         routerLinkActive="active"
