--- a/cuppa/src/app/groups/group-page/group-activity/group-activity.component.html
+++ b/cuppa/src/app/groups/group-page/group-activity/group-activity.component.html
@@ -1,3 +1,7 @@
-<p>
-  group-activity works!
-</p>
+<div class="container">
+  <div *ngIf="group">
+    <div *ngFor="let activity of group.activity">
+      {{ activity | json}}
+    </div>
+  </div>
+</div>
